src/validation/tests/parse_errors/snapshots/rusty__validation__tests__parse_errors__parse_error_containers_tests__illegal_end_pou_keyword.snap
---
source: src/parser/tests/parse_errors/parse_error_containers_tests.rs
expression: diagnostics
---
error[E007]: Unexpected token: expected KeywordEndProgram but found END_FUNCTION
  ┌─ <internal>:4:13
  │
4 │             END_FUNCTION
  │             ^^^^^^^^^^^^ Unexpected token: expected KeywordEndProgram but found END_FUNCTION
